Tornando o site responsivo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <a href="#contact">Contact</a>
       </li>
     </ul>
+    <div class="burguer">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
   </div>
   <div class="banner-area" id="Home"></div>
   <div class="about-area" id="about">
@@ -118,7 +123,7 @@
         possimus enim nulla nesciunt, blanditiis voluptas vero nihil minima deserunt! Iusto.</p>
     </div>
   </div>
-
+  <script src="app.js"></script>
 </body>
 
 </html>
